--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "php": ">=7.2",
         "nekkoy/gateway-abstract": ">=1.0",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0"
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "ext-curl": "*"
     },
     "extra": {
         "laravel": {
